zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__parse_layout_success_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    "Parse success\n\r",
)
