zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__pipe_message_to_plugin_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 5961
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    (
        0,
        1,
        "Payload from self: \"my_cool_payload\"\n\r",
    ),
)
