zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__pipe_output_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 5766
expression: "format!(\"{:#?}\", plugin_bytes_events)"
---
Some(
    PipeOutput(
        "pipe_output",
        "this_is_my_output",
    ),
)
