zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__plugin_receives_config_change_event.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", last_render)"
---
"Rows: 20, Cols: 121, Received events: [PluginConfigurationChanged({\"size\": \"small\", \"theme\": \"light\"})]\n\r"
