zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__plugin_workers.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 250
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    (
        0,
        1,
        "Payload from worker: \"gimme_back_my_payload, received 1 messages\"\n\r",
    ),
)
