zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__plugin_workers_persist_state.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 319
expression: "format!(\"{:#?}\", plugin_bytes_event)"
---
Some(
    (
        0,
        1,
        "Payload from worker: \"gimme_back_my_payload, received 2 messages\"\n\r",
    ),
)
